CHANGED:re-orgnized the code base package,and logging message at piwik service;